--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
+  <title>Mr. Robogers Neighborhood</title>
 </head>
 <body>
   <div class="container">
-    <h1>Loaded</h1>
+    <h1>Welcome to Mr. Robogers Neighborhood!</h1>
+    <p>input a number and hit submit to see Mr. Robogers reply.</p>
+    <div class="row">
+      <div class="col-xs-3">
+        <img class="img-thumbnail" src="img/robot.png" alt="A picture of a robot.">
+      </div>
+      <div class="col-xs-9">
+        <form id="roboForm">
+          <div class="form-group">
+            <label for="userNumber">Input a number here:</label>
+            <input id="userNumber" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Click here for Mr Robogers reply!</button>
+        </form>
+      </div>
+    </div>
   </div>
 </body>
 </html>
