fix column size in index.html and changed img max-width to 30% in styles.css

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Welcome to Mr. Robogers Neighborhood!</h1>
     <p>input a number and hit submit to see Mr. Robogers reply.</p>
     <div class="row">
-      <div class="col-xs-3">
+      <div class="col-md-3">
         <img class="img-thumbnail" src="img/robot.png" alt="A picture of a robot.">
       </div>
-      <div class="col-xs-9">
+      <div class="col-md-9">
         <form id="roboForm">
           <div class="form-group">
             <label for="userNumber">Input a number here:</label>
