add container for robogersReply in index.html and UI Logic to take in information and display it after changes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           </div>
           <button type="submit" class="btn btn-primary btn-block">Click here for Mr Robogers reply!</button>
         </form>
+        <div id="robogersReply">
+          
+        </div>
       </div>
     </div>
   </div>
