fix some typos and make it seem like mr robogers is there to count your number. Also added jumbotron for intro

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to Mr. Robogers Neighborhood!</h1>
-    <p>input a number and hit submit to see Mr. Robogers reply.</p>
+    <div class="jumbotron">
+      <h1>Welcome to Mr. Robogers Neighborhood!</h1>
+      <p>Input a number and hit submit to see Mr. Robogers way of counting up to it. He likes to count but is very easily distracted so be warned he may act erratically.</p>
+    </div>
     <div class="row">
       <div class="col-md-3">
         <img class="img-thumbnail" src="img/robot.png" alt="A picture of a robot.">
@@ -21,7 +23,7 @@
             <label for="userNumber">Input a number here:</label>
             <input id="userNumber" class="form-control" type="text">
           </div>
-          <button type="submit" class="btn btn-primary btn-block">Click here for Mr Robogers reply!</button>
+          <button type="submit" class="btn btn-primary btn-block">Click here for Mr Robogers to count!</button>
         </form>
         <div id="robogersReply">
           
