add form input field for users name

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <label for="userNumber">Input a number here:</label>
             <input id="userNumber" class="form-control" type="text">
           </div>
+          <div class="form-group">
+            <label for="userName">Input your name here:</label>
+            <input id="userName" class="form-control" type="text">
+          </div>
           <button type="submit" class="btn btn-primary btn-block">Click here for Mr Robogers to count!</button>
         </form>
         <div id="robogersReply">
