add functionality to make it so Mr. Robogers response only shows, with a header, after submission

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
           </div>
           <button type="submit" class="btn btn-primary btn-block">Click here for Mr Robogers to count!</button>
         </form>
-        <div id="robogersReply">
-          
+        <div id="robogersBox">
+          <h2>Mr. Robogers says:</h2>
+          <div id="robogersReply">
+          </div>
         </div>
       </div>
     </div>
