fix names and id's to be more consistent

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             <label for="userName">Input your name here:</label>
             <input id="userName" class="form-control" type="text">
           </div>
+          <p>Would you like Mr. Robogers to count up to your number or down from your number?</p>
+          <div class="form-check">
+            <input class="form-check-input" type ="radio" name="countUpOrDown" value="0" id="countUpOrDown1" checked>
+            <label class="form-check-label" for="countUpOrDown1">Count up to my number</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type ="radio" name="countUpOrDown" value="1" id="countUpOrDown2">
+            <label class="form-check-label" for="countUpOrDown2">Count down from my number</label>
+          </div>
           <button type="submit" class="btn btn-primary btn-block">Click here for Mr Robogers to count!</button>
         </form>
         <div id="robogersBox">
