make it so if there is no user input for number it doesnt show robogersBox

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="jumbotron">
       <h1>Welcome to Mr. Robogers Neighborhood!</h1>
-      <p>Input a number and hit submit to see Mr. Robogers way of counting up to it. He likes to count but is very easily distracted so be warned he may act erratically.</p>
+      <p>Input a number and hit submit to see Mr. Robogers way of counting it. He likes to count but is very easily distracted so be warned he may act erratically.</p>
     </div>
     <div class="row">
       <div class="col-md-3">
